WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186717
Better pack ResourceRequest
https://bugs.webkit.org/show_bug.cgi?id=186717
Summary
Better pack ResourceRequest
Chris Dumez
Reported
2018-06-15 19:16:14 PDT
Better pack ResourceRequest to save some memory.
Attachments
Patch
(2.34 KB, patch)
2018-06-15 19:19 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(2.39 KB, patch)
2018-06-16 11:46 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-06-15 19:19:33 PDT
Created
attachment 342867
[details]
Patch
Simon Fraser (smfr)
Comment 2
2018-06-15 21:55:54 PDT
Comment on
attachment 342867
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=342867&action=review
> Source/WebCore/platform/network/ResourceRequestBase.h:245 > + String m_initiatorIdentifier; > + String m_cachePartition { emptyString() };
Wouldn't it be better to move the Strings before the bools?
Chris Dumez
Comment 3
2018-06-16 11:46:19 PDT
Created
attachment 342885
[details]
Patch
Chris Dumez
Comment 4
2018-06-16 11:46:38 PDT
(In reply to Simon Fraser (smfr) from
comment #2
)
> Comment on
attachment 342867
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=342867&action=review
> > > Source/WebCore/platform/network/ResourceRequestBase.h:245 > > + String m_initiatorIdentifier; > > + String m_cachePartition { emptyString() }; > > Wouldn't it be better to move the Strings before the bools?
It does not help but I moved them for cleanliness.
Darin Adler
Comment 5
2018-06-17 11:16:01 PDT
Comment on
attachment 342885
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=342885&action=review
> Source/WebCore/ChangeLog:9 > + Better pack ResourceRequest to reduce its size from 240 to 232 bytes > + on Mac.
What helps us monitor this in the future? I can easily imagine I might ruin the packing if it was invisible to me that I was doing that. Some kind of size static assertion?
WebKit Commit Bot
Comment 6
2018-06-18 15:14:39 PDT
Comment on
attachment 342885
[details]
Patch Clearing flags on attachment: 342885 Committed
r232949
: <
https://trac.webkit.org/changeset/232949
>
WebKit Commit Bot
Comment 7
2018-06-18 15:14:40 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-06-19 09:27:40 PDT
<
rdar://problem/41252203
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug