Better pack ResourceRequest https://bugs.webkit.org/show_bug.cgi?id=186717

Reviewed by Darin Adler.

Better pack ResourceRequest to reduce its size from 240 to 232 bytes
on Mac.

* platform/network/ResourceRequestBase.h:


Canonical link: https://commits.webkit.org/202052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232949 268f45cc-cd09-0410-ab3c-d52691b4dbfc